src/test/ui/nll/issue-52534.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/issue-52534.rs:22:14
   |
LL |     foo(|a| &x)
   |           -  ^ `x` would have to be valid for `'0`
   |           |
   |           has type `&'0 u32`
LL | }
   | - ...but `x` is only valid for the duration of the `bar` function, so it is dropped here while still borrowed

error[E0597]: `y` does not live long enough
  --> $DIR/issue-52534.rs:27:26
   |
LL |     baz(|first, second| &y)
   |               -          ^ `y` would have to be valid for `'0`
   |               |
   |               has type `&'0 u32`
LL | }
   | - ...but `y` is only valid for the duration of the `foobar` function, so it is dropped here while still borrowed

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
